src/style/shared/icons.less
/*
 * Copyright (c) 2014 Adobe Systems Incorporated. All rights reserved.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a
 * copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 * DEALINGS IN THE SOFTWARE.
 *
 */

// TODO: I need to normalize the naming convention, because there isn't one ATM -TR

.x-document-button(@name) {
  background: url("../img/ico-@{name}-white.svg") no-repeat center;
  background-size: .8rem;
}

.document-controls__previous { .x-document-button("previous-arrow") }
.document-controls__next { .x-document-button("next-arrow") }

.toolbar-button, .toolbar__backToPs.button-simple{
    display: flex;
    align-items: center;
    justify-content: center;

    svg {
        box-sizing: content-box;
        width: 1.6rem;
        height: 1.6rem;
        padding-bottom: 0.2rem;
        border-bottom: @hairline solid transparent;
        fill: @warm-white;
        stroke: none;
        color: @warm-gray;
    }
}

.tool-selected svg {
    fill: @highlight;
    stroke: none;
}

.toolbar__backToPs.button-simple {
    position: absolute;
    bottom: 2rem;
    width: 5rem;
}

.panel__hide svg {
    fill: @warm-white;
    height: 0.8rem;
}

.button-generator {
    background: url(../img/ico-generator-white.svg) no-repeat;
    background-size: 2rem;
    background-position-x: 1rem;
    background-position-y: 0.5rem;
}

.pop-over-header .button-generator {
    background: url(../img/ico-generator-black.svg) no-repeat;
    background-size: 2rem;
    background-position-x: 1rem;
    background-position-y: 0.5rem;
}

.x-mode-button(@name) {
    background: url("../img/ico-@{name}-black.svg") no-repeat;
    background-size: 2rem;
}

#mode-grid { .x-mode-button(mode-grid) }

#mode-divide { .x-mode-button(mode-divide) }

#mode-inset { .x-mode-button(mode-inset) }

.button-toggle {
    display: flex;
    align-items: center;
    justify-content: center;

    svg {
        width: 1.6rem;
        height: 2.4rem;
        fill: @warm-white;
        stroke: none;
        color: @warm-gray;
    }
}

.button-plus.button-simple {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1.5rem;
    height: 1.5rem;

    svg {
        width: 1.5rem;
        height: 1.5rem;
        stroke:  @color-subsection-rule;
    }
}

.face {
    .button-toggle {
        svg {
            display: none;
        }
    }

    .button-toggle[data-selected="true"], &:hover .button-toggle {
        svg {
            display: block;
            fill: @label-primary-color;
            stroke: none;
        }
    }
}


.face.face__select_immediate {
    .button-toggle,
    &:hover .button-toggle{
        svg {
            fill: @label-secondary-color;
            stroke: none;        
            display: block;
        }
    }
}

.face.face__not-visible:hover .button-toggle,
.face.face__not-visible .button-toggle {
    svg {
        fill: @label-active-color;
        opacity: @label-hidden-opacity;  
        stroke: none;
        display: block;
    }
}

.fill-list__fill,
.stroke-list__stroke,
.shadow-list__shadow{

    .button-toggle {
        svg {
            display: none;
        }
    }

    .button-toggle[data-selected="false"] {
        svg {
            display: block;
            fill: @warm-white;
            stroke: none;
        }
    }

    &:hover .button-toggle:not([data-selected="false"]) {
        opacity: 0.5;

        svg {
            display: block;
            fill: @warm-white;
            stroke: none;
        }
    }

    .button-toggle[data-selected="true"] {
        svg {
            display: none;
            fill: @warm-black;
            stroke: none;
            color: @warm-gray;
        }
    }

    .button-toggle.layer-delete {
        svg {
            stroke-width: 40px;
            stroke: none;
            transform: scale(2);
        }
    }
}

/* STYLE ----------------------*/

.button-combo:focus {
    background: url(../img/ico-search-white.svg) no-repeat center;
    background-position-x: .5rem;
}

.pop-over-header .button-combo:focus {
    background: url(../img/ico-search-black.svg) no-repeat center;
    background-position-x: .5rem;
}

/* PAGES ----------------------*/

.face__kind {
    display: flex;
    align-items: center;
    justify-content: center;

    svg{
        width: 1.8rem;
        height: 2.4rem;
        fill: @label-secondary-color;
        stroke: none;

    }
}

.face[data-kind="7"] .face__kind {
    svg{
        fill: @label-primary-color;     
    }
}

.face__not-visible {    
    .face__kind, 
    &:hover .face__kind
    &.face[data-kind="7"]:hover .face__kind,
    &.face[data-kind="7"] .face__kind {
      svg {
          opacity: @label-hidden-opacity;
          fill: @label-primary-color;
          stroke: none;
      }
    }
}


// applies to the selected item
.face__select_immediate .face__kind, .face__select_immediate:hover .face__kind {
  svg {
      fill: @label-active-color;
      stroke: none;
  }
}

.face__select_immediate.face[data-kind="7"] .face__kind {
    svg{
        fill: @label-active-color;
        stroke: none;
    }
}

.carousel__slide-button__next,
.carousel__slide-button__prev {
    display: flex;
    align-items: center;
    justify-content: center;

    svg {
        width: 1rem;
        height: 1rem;
        fill: @warm-black;
        stroke: none;
    }

    &:hover svg {
        fill: @warm-white;
        stroke: none;
    }
}

